# VPLines-SLAM

./: README.md
config/: vins_rviz_config.rviz
config/527/: 527.yaml  extrinsic_parameter.csv
config/d455/: d455.yaml
config/d455plus/: d455plus.yaml
config/euroc/: euroc_config.yaml
config/t265/: t265.yaml
config/tum/: tum_config.yaml
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/include/: feature_tracker.h  linefeature_tracker.h  parameters.h  vanishing_point_detection.h
feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp  image_show_node.cpp  line_feature_tracker.cpp  line_feature_tracker_node.cpp  parameters.cpp  vanishing_point_detection.cpp
feature_tracker/src/cvmodified/: cvmodified.cpp
global_fusion/: CMakeLists.txt
global_fusion/src/: globalGnssNode.cpp  globalGnssNodeSub.cpp  globalOpt.cpp  globalOpt.h  globalOptNode.cpp
line_matching/: CMakeLists.txt
line_matching/src/: klt.cpp  line_matching.cpp  line_matching.h  lk_tracker_invoker_1d.cpp  lk_tracker_invoker_2d.cpp  lk_tracker_invoker_2d_single.cpp  lk_tracker_invoker_ori.cpp  test_edline_detector.cpp  test_line_matching.cpp
relust/: global_fusion.txt  gnss.txt  odom.txt
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: 527.launch  d455.launch  d455plus.launch  euroc.launch  t265.launch  tum.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  feature_selector.cpp  feature_selector.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: line_projection_factor.cpp  line_projection_factor.h  time_factor.cpp  time_factor.h
vins_estimator/src/initial/: initial_ex_rotation.h
vins_estimator/src/utility/: utility.h  visualization.cpp  visualization.h
vins_estimator/src/utility/selector/: horizon_generator.cpp  horizon_generator.h  state_defs.h
